--- a/index.html
+++ b/index.html
@@ -141,11 +141,7 @@
 	      	<div class="overlay"></div>
 	         <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-<<<<<<< HEAD
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/back1.jpg);">
-=======
 	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_12.JPEG);">
->>>>>>> da72174fc41ca0c6d81ad2410b9693d0015479c6
 	          	 <div class="overlay"></div>	
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -410,29 +406,29 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample on DevOps & Cloud.</p>
+            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
           </div>
         </div>
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/Ayushkabra7766/Swiggy-Web-Clone" class="block-20 zoom-effect" style="background-image: url('images/prj_1.jpg');">
+              <a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Ayushkabra7766/Swiggy-Web-Clone">Swiggy clone | CI-CD Automation</a></h3>
-                <p>Using CI/CD & Docker Create automated deployment.</p>
+                <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3>
+                <p>Analyzed music store data using advanced SQL queires to identify gaps and increase the business growth.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/Ayushkabra7766/Hotstar" class="block-20 zoom-effect" style="background-image: url('images/Hotstar.png');">
+              <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Ayushkabra7766/Hotstar">DevSecOps CI/CD Deploying a Secure Hotstar Clone</a></h3>
-                <p>Deploying Hotstar Application on Kubernetes cluster.</p>
+                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Data Analysis using Python Project for Beginners</a></h3>
+                <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
               </div>
             </div>
           </div>
