--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/Ayushkabra7766/Netflix-clone.git">Netflix Clone CI/CD with Monitoring | Jenkins | Docker| Kubernetes| Monitoring | DevSecOps</a></h3>
-                <p>Using Jenkins as a CICD tool and deploying our application on a Docker container and Kubernetes Cluster. .</p>
+                <p>Using Jenkins as a CICD tool and deploying our application on a Docker container and Kubernetes Cluster.</p>
               </div>
             </div>
           </div>
@@ -449,23 +449,23 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://github.com/Ayushkabra7766/2048Game.git" class="block-20 zoom-effect" style="background-image: url('images/game.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Sales Forecast- Time Series Forecasting</a></h3>
-				  <p>Used multiple machine learning models to forecast sales (retail store) and performed time series analysis.</p>
+				  <h3 class="heading"><a href="https://github.com/Ayushkabra7766/2048Game.git">Deploying 2048 Game on Docker and Kubernetes with Jenkins CI/CD</a></h3>
+				  <p>we will be deploying a React Js 2048 Game. We will be using Jenkins as a CICD tool and deploying our application on a Docker container and Kubernetes Cluster.</p>
 				</div>
 			  </div>
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				<a href="https://github.com/Ayushkabra7766/candycrush.git" class="block-20 zoom-effect" style="background-image: url('images/crush.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">Customer Segmentation using clustering model</a></h3>
-				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+				  <h3 class="heading"><a href="https://github.com/Ayushkabra7766/candycrush.git">Candycrush Deployment on AWS EKS using GitHub Actions in DevSecOps Pipeline.</a></h3>
+				  <p>Continuous Integration (CI) and Continuous Deployment (CD).GitHub Actions brings automation to every aspect of the development process.</p>
 				</div>
 			  </div>
 			</div>
