--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://github.com/Ayushkabra7766/Portfolio/blob/master/images/%20Ayush_Kabra_CV.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
